fix(allocations): table cell content alignment
The alignement in the design is top, not middle.

Design: https://xd.adobe.com/view/db2660cc-1011-4f26-5d31-019ce87c1fe8-ad17/screen/209a0ee5-8add-4931-955e-e33f20bdc9e5/specs/

--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -106,6 +106,11 @@
     font-size: 0.875rem; /* 14px (approved deviation from design) */
   }
 }
+/* Selector is long so it is specific enough to override without !important */
+/* NOTE: The length of selector helps devs find the source of the overwrite */
+.allocations-table.InfiniteScrollTable tbody tr:not(.-status) td {
+  vertical-align: top;
+}
 
 /* HACK: The loading icon should not need height set, but it fixes Safari here */
 /* FP-426: Do not use `height: 100%` or isolate usage pending solution to bigger problem */
